<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/home" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search" />
    <item
        android:id="@+id/scannerFragment"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/scanner" />
    <item
        android:id="@+id/myListFragment"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/my_list" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/profile" />
</menu>
